--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,11 @@ dependencies:
   fluttertoast: ^9.0.0
   easy_localization: ^3.0.8
   flutter_bloc: ^9.1.1
+  get_it: ^9.1.1
+  responsive_sizer: ^3.3.1
+  flutter_native_splash: ^2.4.7
+  intl: ^0.20.2
+  loading_animation_widget: ^1.3.0
 
 dev_dependencies:
   flutter_test:
